[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mmguero"
version = "1.4.1"
authors = [
  { name="Seth Grover", email="mero.mero.guero@gmail.com" },
]
description = "Seth Grover's useful Python helpers"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Utilities"
]

[project.urls]
Homepage = "https://github.com/mmguero/python-mmguero"
Issues = "https://github.com/mmguero/python-mmguero/issues"
Repository = "https://github.com/mmguero/python-mmguero.git"

[project.scripts]
mmguero = "mmguero:main"

[tool.pytest.ini_options]
pythonpath = "src"
addopts = [
    "--import-mode=importlib",
]
