[metadata]
name = mmguero
version = 1.0.1
author = Seth Grover
author_email = mero.mero.guero@gmail.com
description = Useful helpers by me, for me.
license = MIT
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/mmguero/python-mmguero
project_urls =
    Bug Tracker = https://github.com/mmguero/python-mmguero/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License

[options]
package_dir =
    = src
packages = find:
zip_safe = False
python_requires = >=3.6

[options.packages.find]
where = src